{
  "version": 4,
  "terraform_version": "1.8.4",
  "serial": 43,
  "lineage": "2d6d2bd5-2659-3ac8-94c3-4b0ed5ff5026",
  "resources": [
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0fe630eb857a6ec83",
            "arn": "arn:aws:ec2:us-east-1:752022489534:instance/i-0c1ae8f4a2d45ebcf",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0c1ae8f4a2d45ebcf",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-09b69eeec1288f2d0",
            "private_dns": "ip-10-0-1-102.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.102",
            "public_dns": "ec2-3-89-103-58.compute-1.amazonaws.com",
            "public_ip": "3.89.103.58",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0b8ee0616135266c5",
                "volume_size": 10,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0cb9a6388de3516c7",
            "tags": {
              "Name": "vpc-044b92e3a96ca22fd-ec2-instance"
            },
            "tags_all": {
              "Name": "vpc-044b92e3a96ca22fd-ec2-instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0085187effdbeacc6"
            ]
          },
          "dependencies": [
            "module.sg.aws_security_group.jenkins-sg",
            "module.subnets.aws_subnet.pb-subnet",
            "module.vpc.aws_vpc.vpc_main"
          ]
        }
      ]
    },
    {
      "module": "module.igw",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:752022489534:internet-gateway/igw-0d68e391b0e403cfc",
            "id": "igw-0d68e391b0e403cfc",
            "owner_id": "752022489534",
            "tags": {
              "Name": "igw-vpc-044b92e3a96ca22fd"
            },
            "tags_all": {
              "Name": "igw-vpc-044b92e3a96ca22fd"
            },
            "vpc_id": "vpc-044b92e3a96ca22fd"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc_main"
          ]
        }
      ]
    },
    {
      "module": "module.nat",
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-085798c9d62f184e9",
            "arn": "arn:aws:ec2:us-east-1:752022489534:elastic-ip/eipalloc-085798c9d62f184e9",
            "association_id": "eipassoc-01f5dcacca4cc8704",
            "domain": "vpc",
            "id": "eipalloc-085798c9d62f184e9",
            "network_border_group": "us-east-1",
            "network_interface": "eni-080b1709db06b3b32",
            "private_dns": "ip-10-0-2-249.ec2.internal",
            "private_ip": "10.0.2.249",
            "public_dns": "ec2-18-233-201-198.compute-1.amazonaws.com",
            "public_ip": "18.233.201.198",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "eip-vpc-044b92e3a96ca22fd"
            },
            "tags_all": {
              "Name": "eip-vpc-044b92e3a96ca22fd"
            },
            "vpc": true
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc_main"
          ]
        }
      ]
    },
    {
      "module": "module.nat",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat-gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-085798c9d62f184e9",
            "association_id": "eipassoc-01f5dcacca4cc8704",
            "connectivity_type": "public",
            "id": "nat-0808896d47a02d1f0",
            "network_interface_id": "eni-080b1709db06b3b32",
            "private_ip": "10.0.2.249",
            "public_ip": "18.233.201.198",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0f1abd0ce4a0cc82f",
            "tags": {
              "Name": "nat-gw-vpc-044b92e3a96ca22fd"
            },
            "tags_all": {
              "Name": "nat-gw-vpc-044b92e3a96ca22fd"
            }
          },
          "dependencies": [
            "module.igw.aws_internet_gateway.igw",
            "module.nat.aws_eip.eip",
            "module.subnets.aws_subnet.pb-subnet",
            "module.vpc.aws_vpc.vpc_main"
          ]
        }
      ]
    },
    {
      "module": "module.pb_table",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "igw_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:752022489534:route-table/rtb-0896d35993c824831",
            "id": "rtb-0896d35993c824831",
            "owner_id": "752022489534",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0d68e391b0e403cfc",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "igw-vpc-044b92e3a96ca22fd"
            },
            "tags_all": {
              "Name": "igw-vpc-044b92e3a96ca22fd"
            },
            "timeouts": null,
            "vpc_id": "vpc-044b92e3a96ca22fd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.igw.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.vpc_main"
          ]
        }
      ]
    },
    {
      "module": "module.pb_table",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "igw_table_ass",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0edc506cfe5a071e8",
            "route_table_id": "rtb-0896d35993c824831",
            "subnet_id": "subnet-0f1abd0ce4a0cc82f"
          },
          "dependencies": [
            "module.igw.aws_internet_gateway.igw",
            "module.pb_table.aws_route_table.igw_table",
            "module.subnets.aws_subnet.pb-subnet",
            "module.vpc.aws_vpc.vpc_main"
          ]
        }
      ]
    },
    {
      "module": "module.pr-table",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "nat_gw_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:752022489534:route-table/rtb-03518067d4628bf4c",
            "id": "rtb-03518067d4628bf4c",
            "owner_id": "752022489534",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0808896d47a02d1f0",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "igw-vpc-044b92e3a96ca22fd"
            },
            "tags_all": {
              "Name": "igw-vpc-044b92e3a96ca22fd"
            },
            "timeouts": null,
            "vpc_id": "vpc-044b92e3a96ca22fd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.igw.aws_internet_gateway.igw",
            "module.nat.aws_eip.eip",
            "module.nat.aws_nat_gateway.nat-gw",
            "module.subnets.aws_subnet.pb-subnet",
            "module.vpc.aws_vpc.vpc_main"
          ]
        }
      ]
    },
    {
      "module": "module.pr-table",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "igw_table_ass",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "us-east-1a",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a0f2fb8ab1713c5e",
            "route_table_id": "rtb-03518067d4628bf4c",
            "subnet_id": "subnet-097327920f49523f1"
          },
          "dependencies": [
            "module.igw.aws_internet_gateway.igw",
            "module.nat.aws_eip.eip",
            "module.nat.aws_nat_gateway.nat-gw",
            "module.pr-table.aws_route_table.nat_gw_table",
            "module.subnets.aws_subnet.pb-subnet",
            "module.subnets.aws_subnet.pr-subnet",
            "module.vpc.aws_vpc.vpc_main"
          ]
        },
        {
          "index_key": "us-east-1b",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-047abca20569af52c",
            "route_table_id": "rtb-03518067d4628bf4c",
            "subnet_id": "subnet-04296bd3e58ebdf98"
          },
          "dependencies": [
            "module.igw.aws_internet_gateway.igw",
            "module.nat.aws_eip.eip",
            "module.nat.aws_nat_gateway.nat-gw",
            "module.pr-table.aws_route_table.nat_gw_table",
            "module.subnets.aws_subnet.pb-subnet",
            "module.subnets.aws_subnet.pr-subnet",
            "module.vpc.aws_vpc.vpc_main"
          ]
        }
      ]
    },
    {
      "module": "module.sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "jenkins-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:752022489534:security-group/sg-0085187effdbeacc6",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0085187effdbeacc6",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "terraform-20240613123046338400000001",
            "name_prefix": "terraform-",
            "owner_id": "752022489534",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "vpc-044b92e3a96ca22fd-sg"
            },
            "tags_all": {
              "Name": "vpc-044b92e3a96ca22fd-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-044b92e3a96ca22fd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.vpc_main"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pb-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "us-east-1a",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:752022489534:subnet/subnet-0cb9a6388de3516c7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cb9a6388de3516c7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "752022489534",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pr-subnet-vpc-044b92e3a96ca22fd-us-east-1a"
            },
            "tags_all": {
              "Name": "pr-subnet-vpc-044b92e3a96ca22fd-us-east-1a"
            },
            "vpc_id": "vpc-044b92e3a96ca22fd"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc_main"
          ]
        },
        {
          "index_key": "us-east-1b",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:752022489534:subnet/subnet-0f1abd0ce4a0cc82f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f1abd0ce4a0cc82f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "752022489534",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pr-subnet-vpc-044b92e3a96ca22fd-us-east-1b"
            },
            "tags_all": {
              "Name": "pr-subnet-vpc-044b92e3a96ca22fd-us-east-1b"
            },
            "vpc_id": "vpc-044b92e3a96ca22fd"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc_main"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pr-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "us-east-1a",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:752022489534:subnet/subnet-097327920f49523f1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-097327920f49523f1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "752022489534",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pb-subnet-vpc-044b92e3a96ca22fd-us-east-1a"
            },
            "tags_all": {
              "Name": "pb-subnet-vpc-044b92e3a96ca22fd-us-east-1a"
            },
            "vpc_id": "vpc-044b92e3a96ca22fd"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc_main"
          ]
        },
        {
          "index_key": "us-east-1b",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:752022489534:subnet/subnet-04296bd3e58ebdf98",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04296bd3e58ebdf98",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "752022489534",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pb-subnet-vpc-044b92e3a96ca22fd-us-east-1b"
            },
            "tags_all": {
              "Name": "pb-subnet-vpc-044b92e3a96ca22fd-us-east-1b"
            },
            "vpc_id": "vpc-044b92e3a96ca22fd"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc_main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc_main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:752022489534:vpc/vpc-044b92e3a96ca22fd",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0629727e48167dd61",
            "default_route_table_id": "rtb-0a30d63e7feae6625",
            "default_security_group_id": "sg-0ece46252427b2669",
            "dhcp_options_id": "dopt-0575ad848810dcdcf",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-044b92e3a96ca22fd",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0a30d63e7feae6625",
            "owner_id": "752022489534",
            "tags": {
              "Name": "vpc-main"
            },
            "tags_all": {
              "Name": "vpc-main"
            }
          }
        }
      ]
    }
  ]
}